--- a/src/app/item/item.component.html
+++ b/src/app/item/item.component.html
@@ -12,7 +12,7 @@
             <span class="glyphicon glyphicon-time"></span> {{item_agreement_params.date_created}}
           </div>
           <div class="alert alert-info">
-            <img src={{item_images[0].image}} alt="800x600" border="0" class="item_image">
+            <img src={{item_images[0].image}} alt="800x600" border="0" class="item_image_single">
             <div id="item_desc">
               <p><strong>Description: </strong>{{item_item_params.description}}</p>
             </div>
