--- a/src/app/agreement/agreement.component.html
+++ b/src/app/agreement/agreement.component.html
@@ -22,7 +22,7 @@
             </div>
           </div>
         </div>
-        <div class="row" align="center" *ngIf="!clerk_confirmed">
+        <div class="row" align="center" *ngIf="clerk_confirmed == false">
           <div class="col-lg-12">
             <button class="btn btn-success" (click)="confirmClerk()"><span class="glyphicon glyphicon-ok"></span> Confirm decision</button>
           </div>
