--- a/src/app/agreement/agreement.component.html
+++ b/src/app/agreement/agreement.component.html
@@ -4,7 +4,8 @@
   <!--Agreement header-->
   <div class="row">
     <div class="col-lg-12" style="margin-bottom: 7px;">
-      <h3><strong>Details of agreement <a (click)="explore_address(agreement_id)">0x{{agreement_id}}</a></strong></h3>
+      <h3><strong>Details of agreement <a (click)="explore_address(agreement_id)">0x{{agreement_id}}</a></strong>
+          <span class="glyphicon glyphicon-refresh clickable" (click)="fetchAgreementDetails()"></span></h3>
     </div>
   </div>
 
