--- a/src/app/agreement/agreement.component.html
+++ b/src/app/agreement/agreement.component.html
@@ -4,7 +4,7 @@
   <!--Agreement header-->
   <div class="row">
     <div class="col-lg-12" style="margin-bottom: 7px;">
-      <h3><strong>Details of agreement <a (click)="explore_address(agreement_id)">0x{{agreement_id}}</a></strong>
+      <h3><strong>Details of agreement <a (click)="exploreAddress(agreement_id)">0x{{agreement_id}}</a></strong>
           <span class="glyphicon glyphicon-refresh clickable" (click)="fetchAgreementDetails()"></span></h3>
     </div>
   </div>
@@ -211,7 +211,7 @@
         </thead>
         <tbody>
           <tr *ngFor="let event of agreement_events">
-            <td scope="row"><a (click)="explore_address(event.event_id)">{{event.event_id}}</a></td>
+            <td scope="row"><a (click)="exploreAddress(event.event_id)">{{event.event_id}}</a></td>
             <td scope="row">{{event.event_type}}</td>
             <td scope="row">{{event.timestamp}}</td>
           </tr>
