--- a/src/app/item/item.component.html
+++ b/src/app/item/item.component.html
@@ -7,14 +7,16 @@
       <div class="row">
         <div class="col-lg-12">
           <div class="alert alert-info">
-            <h3><span class="glyphicon glyphicon-tags"></span> <strong> {{item_item_params.title}}</strong></h3>
-            <span class="glyphicon glyphicon-link"></span> {{item_agreement_params.agreement_id}}&nbsp;
-            <span class="glyphicon glyphicon-time"></span> {{item_agreement_params.date_created}}
+            <h3><span class="glyphicon glyphicon-tags"></span> <strong> {{item_item_params?.title}}</strong></h3>
+            <span class="glyphicon glyphicon-link"></span> {{item_agreement_params?.agreement_id}}&nbsp;
+            <span class="glyphicon glyphicon-time"></span> {{item_agreement_params?.date_created}}
           </div>
           <div class="alert alert-info">
-            <img src={{item_images[0].image}} alt="800x600" border="0" class="item_image_single">
+            <div *ngIf="item_images != null">
+              <img src={{item_images[0]?.image}} alt="800x600" border="0" class="item_image_single">
+            </div>
             <div id="item_desc">
-              <p><strong>Description: </strong>{{item_item_params.description}}</p>
+              <p><strong>Description: </strong>{{item_item_params?.description}}</p>
             </div>
           </div>
         </div>
@@ -24,33 +26,29 @@
       <div class="row">
         <div class="col-lg-12">
           <div class="alert alert-info">
+            <!--Initial general inormation-->
             <h4><span class="glyphicon glyphicon-file"></span> <strong>Initial terms</strong></h4><hr>
-            <div *ngFor="let terms of item_terms">
-              <div *ngIf="terms.status === 'INITIAL'">
+            <p><span class="glyphicon glyphicon-user"></span> <strong>Seller account: </strong> {{item_agreement_params?.seller_id}}</p>
+            <p><span class="glyphicon glyphicon-credit-card"></span> <strong>Initial price: </strong> {{item_default_terms?.price}} SEK</p>
+            <p><span class="glyphicon glyphicon-transfer"></span> <strong>Postage due within: </strong> {{item_default_terms?.postage_time}} hours</p>
 
-                <p><span class="glyphicon glyphicon-user"></span> <strong>Seller account: </strong> {{item_agreement_params.seller_id}}</p>
-                <p><span class="glyphicon glyphicon-credit-card"></span> <strong>Initial price: </strong> {{terms.price}} SEK</p>
-                <p><span class="glyphicon glyphicon-transfer"></span> <strong>Postage due within: </strong> {{terms.postage_time}} hours</p>
-
-                <p> <span *ngIf="terms.accelerometer !== null" class="glyphicon glyphicon-ok"></span>
-                  <span *ngIf="terms.accelerometer === null" class="glyphicon glyphicon-remove"></span>
-                  <strong>Accelerometer</strong> <strong *ngIf="terms.accelerometer !== null">({{terms.accelerometer}} G)</strong></p>
-                <p> <span *ngIf="terms.pressure_low !== null" class="glyphicon glyphicon-ok"></span>
-                  <span *ngIf="terms.pressure_low === null" class="glyphicon glyphicon-remove"></span>
-                  <strong>Pressure sensor</strong> <strong *ngIf="terms.pressure_low !== null">({{terms.pressure_low}} to {{terms.pressure_high}} PSI)</strong></p>
-                <p> <span *ngIf="terms.humidity_low !== null" class="glyphicon glyphicon-ok"></span>
-                  <span *ngIf="terms.humidity_low === null" class="glyphicon glyphicon-remove"></span>
-                  <strong>Humidity sensor</strong> <strong *ngIf="terms.humidity_low !== null">({{terms.humidity_low}} to {{terms.humidity_high}} %)</strong></p>
-                <p> <span *ngIf="terms.temperature_low !== null" class="glyphicon glyphicon-ok"></span>
-                  <span *ngIf="terms.temperature_low === null" class="glyphicon glyphicon-remove"></span>
-                  <strong>Temperature sensor</strong> <strong *ngIf="terms.temperature_low !== null">({{terms.temperature_low}} to {{terms.temperature_high}} &#8451;)</strong></p>
-                <p> <span *ngIf="terms.gps !== 0" class="glyphicon glyphicon-ok"></span>
-                  <span *ngIf="terms.humidity_low === 0" class="glyphicon glyphicon-remove"></span>
-                  <strong>GPS</strong>
-                </p>
-
-              </div>
-            </div>
+            <!--Initial sensor conditions-->
+            <p> <span *ngIf="item_default_terms?.accelerometer !== null" class="glyphicon glyphicon-ok"></span>
+              <span *ngIf="item_default_terms?.accelerometer === null" class="glyphicon glyphicon-remove"></span>
+              <strong>Accelerometer</strong> <strong *ngIf="item_default_terms?.accelerometer !== null">({{item_default_terms?.accelerometer}} G)</strong></p>
+            <p> <span *ngIf="item_default_terms?.pressure_low !== null" class="glyphicon glyphicon-ok"></span>
+              <span *ngIf="item_default_terms?.pressure_low === null" class="glyphicon glyphicon-remove"></span>
+              <strong>Pressure sensor</strong> <strong *ngIf="item_default_terms?.pressure_low !== null">({{item_default_terms?.pressure_low}} to {{item_default_terms?.pressure_high}} PSI)</strong></p>
+            <p> <span *ngIf="item_default_terms?.humidity_low !== null" class="glyphicon glyphicon-ok"></span>
+              <span *ngIf="item_default_terms?.humidity_low === null" class="glyphicon glyphicon-remove"></span>
+              <strong>Humidity sensor</strong> <strong *ngIf="item_default_terms?.humidity_low !== null">({{item_default_terms?.humidity_low}} to {{item_default_terms?.humidity_high}} %)</strong></p>
+            <p> <span *ngIf="item_default_terms?.temperature_low !== null" class="glyphicon glyphicon-ok"></span>
+              <span *ngIf="item_default_terms?.temperature_low === null" class="glyphicon glyphicon-remove"></span>
+              <strong>Temperature sensor</strong> <strong *ngIf="item_default_terms?.temperature_low !== null">({{item_default_terms?.temperature_low}} to {{item_default_terms?.temperature_high}} &#8451;)</strong></p>
+            <p> <span *ngIf="item_default_terms?.gps == 1" class="glyphicon glyphicon-ok"></span>
+              <span *ngIf="item_default_terms?.gps == 0" class="glyphicon glyphicon-remove"></span>
+              <strong>GPS</strong>
+            </p>
           </div>
         </div>
       </div>
@@ -59,10 +57,10 @@
       <div class="row">
         <div class="col-lg-12">
           <div class="form-group">
-            <button [disabled]="item_terms.length === 1" class="btn btn-primary form-control"  data-toggle="modal" data-target="#termsModal" [ngClass]="{'disabled': item_terms.length === 1}">View proposals <span class="label label-info">{{item_terms.length-1}}</span></button>
+            <button [disabled]="item_terms?.length === 1" class="btn btn-primary form-control"  data-toggle="modal" data-target="#termsModal" [ngClass]="{'disabled': item_terms?.length === 1}">View proposals <span class="label label-info">{{item_terms?.length-1}}</span></button>
           </div>
           <div class="form-group">
-            <button *ngIf="item_agreement_params.seller_id != global.globalvars.account_logged_in && global.globalvars.account_logged_in != null" class="btn btn-primary form-control" data-toggle="modal" data-target="#proposalModal">Make a proposal</button>
+            <button *ngIf="item_agreement_params?.seller_id != global.globalvars.account_logged_in && global.globalvars.account_logged_in != null" class="btn btn-primary form-control" data-toggle="modal" data-target="#proposalModal">Make a proposal</button>
           </div>
         </div>
       </div>
