--- a/src/app/item/item.component.html
+++ b/src/app/item/item.component.html
@@ -57,7 +57,8 @@
       <div class="row">
         <div class="col-lg-12">
           <div class="form-group">
-            <button [disabled]="item_terms?.length === 1" class="btn btn-primary form-control"  data-toggle="modal" data-target="#termsModal" [ngClass]="{'disabled': item_terms?.length === 1}">View proposals <span class="label label-info">{{item_terms?.length-1}}</span></button>
+            <button *ngIf="item_terms?.length === 1" class="btn btn-primary form-control disabled">View proposals <span class="label label-info">0</span></button>
+            <button *ngIf="item_terms?.length > 1" class="btn btn-primary form-control"  data-toggle="modal" data-target="#termsModal">View proposals <span class="label label-info">{{item_terms?.length-1}}</span></button>
           </div>
           <div class="form-group">
             <button *ngIf="item_agreement_params?.seller_id != global.globalvars.account_logged_in && global.globalvars.account_logged_in != null" class="btn btn-primary form-control" data-toggle="modal" data-target="#proposalModal">Make a proposal</button>
@@ -210,12 +211,13 @@
           <select class="form-control" id="proposal_states" [(ngModel)]="proposal_state_chosen">
             <option selected="selected">PROPOSED</option>
             <option>DENIED</option>
+            <option>INACTIVE</option>
           </select>
         </div>
 
         <!--Proposal display-->
         <div *ngFor="let terms of item_terms">
-          <div class="alert" [hidden]="terms.status != proposal_state_chosen" [ngClass]="{'alert-info': terms.status == 'PROPOSED', 'alert-danger': terms.status == 'DENIED'}">
+          <div class="alert" [hidden]="terms.status != proposal_state_chosen" [ngClass]="{'alert-info': terms.status == 'PROPOSED', 'alert-danger': (terms.status == 'DENIED' || terms.status == 'INACTIVE')}">
             <h4><span class="glyphicon glyphicon-file"></span> <strong>Proposal #{{terms.terms_id}}</strong></h4>
             <p><span class="glyphicon glyphicon-cog"></span> <strong>Status: {{terms.status}}</strong></p>
             <p><span class="glyphicon glyphicon-user"></span> <strong>Proposed by: </strong>{{terms.author_account}}</p>
